<resources>
    <string name="app_name">StoryApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="your_new_world_of_stories_is_just_a_tap_away_explore_a_universe_filled_with_captivating_tales_from_thrilling_adventures_to_heartwarming_romances">Your new world of stories is just a tap away. Explore a universe filled with captivating tales, from thrilling adventures to heartwarming romances.</string>
    <string name="welcome_to_story_app">Welcome to Story App</string>
    <string name="validationPassword">Password must be at least 8 characters</string>
    <string name="get_ready_to_share_story">Get Ready To Share Story ?</string>
    <string name="please_login_first_to_continue">Please Login First to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="is_fun_to_share_yout_story_in_this_platform">Is Fun To Share Yout Story In This Platform !</string>
    <string name="please_regist_your_data_first_to_make_account">Please Regist Your Data First To Make Account</string>
    <string name="name">Name</string>
    <string name="not_have_account">Not Have Account ?</string>
    <string name="error_empty_name">Empty Name</string>
    <string name="error_empty_email">Empty Email</string>
    <string name="error_empty_password">Empty Password</string>
    <string name="register_success">Register SuccessFully</string>
    <string name="login_success">Welcome Back</string>
    <string name="logout">Logout</string>
    <string name="press_again_for_exit">Press Again For Exit</string>
    <string name="validationEmail">Invalid email format</string>
    <string name="detail">Detail</string>
    <string name="logout_success">Logout Success</string>
    <string name="invalid_story_id_or_token">Invalid story ID or token</string>
    <string name="add_story">Add Story</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="story_uploaded_successfully">Story uploaded successfully!</string>
    <string name="please_provide_a_description">Please provide a description.</string>
    <string name="please_select_an_image">Please select an image.</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="failed_take_picture">Failed Take Picture</string>
    <string name="failed_open_camera">Failed Open Camera</string>
    <string name="setting">Setting</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="please_login_first">Please Login First</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="home">Story</string>
    <string name="story_map">Story Map</string>
    <string name="retry">Retry</string>
</resources>