<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">

    <include
        layout="@layout/toolbar_component"
        android:id="@+id/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPicture"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="12dp"
                android:contentDescription="picture"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_placeholder" />

            <!-- TextInputLayout with TextInputEditText for description -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                app:boxBackgroundMode="none"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:fontFamily="@font/open_sans" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnCamera"
        style="@style/RoundedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_marginStart="8dp"
        android:drawableLeft="@drawable/ic_camera"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:padding="8dp"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGallery"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btnGallery"
        style="@style/RoundedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:drawableLeft="@drawable/ic_image"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:padding="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintStart_toEndOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp" />


    <FrameLayout
        android:id="@+id/buttonFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- ProgressBar, initially hidden -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminate="true" />

        <!-- Button -->
        <Button
            android:id="@+id/btnUpload"
            style="@style/RoundedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:drawablePadding="8dp"
            android:textSize="16sp"
            android:layout_marginStart="8dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
